syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rune.harmonia.proto";

package harmoniacartservice;

service HarmoniaCartService {
  rpc CreateCart(CreateCartRequest) returns (Cart) {}
}

message CreateCartRequest {
  string cartId = 1;
  string customerId = 2;
  string regionId = 3;
  string salesChannelId = 4;
  string countryCode = 5;
  map<string ,int32> items = 6;
  optional ItemMetadataPayload itemMetadata = 7;
  optional ContextPayload context = 8;
}

message Cart {
  string customerId = 1;
  string regionId = 2;
  string salesChannelId = 3;
  string countryCode = 4;
  map<string, LineItem> items = 5;
  optional ContextPayload context = 6;
  optional int64 checkoutTimestamp = 7;
}

message ContextPayload {
  map<string, string> context = 1;
}

message ItemMetadataPayload {
  map<string, ItemMetadata> itemsMetadata = 1;
}

message ItemMetadata {
  map<string, string> metadata = 1;
}

message LineItem {
  int32 quantity = 1;
  optional ItemMetadata metadata = 2;
}